# RAG-1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/rag_1/: GoogleGeminiRAG.py  __init__.py  generation.py  main.py  search.py  utils.py  validation.py
src/rag_1/config/: config.json  config_edit.json
