[project]
name = "rag-1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yukihito", email = "ok220020@oks.iput.ac.jp" }
]
dependencies = [
    "langchain>=0.2.16",
    "openai>=1.44.1",
    "langchain-google-genai>=1.0.10",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.16",
    "sentence-transformers>=3.1.0",
    "langchain-chroma>=0.1.3",
    "langchain-huggingface>=0.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag_1"]
